# Cordite-Display-Manager

./: .gitignore  CMakeLists.txt  LICENSE  README  dim2d.h  displaymanager.kdev4  doxygen.cfg  events.h  factory.cpp  factory.h  main.cpp  process.cpp  process.h  screen.h  screenimpl.cpp  screenimpl.h  threadedsurface.h  window.cpp  window.h
